# InsTux

./: .gitmodules  CMakeLists.txt  README.md  load  uload
src/: InsTux.cpp  config.cpp  config.h  fonts.cpp  fonts.h  hooker.cpp  hooker.h  interfaces.cpp  interfaces.h  logger.cpp  logger.h  offsets.cpp  offsets.h  settings.cpp  settings.h
src/Hacks/: .aimbot.cpp.swp  .aimbot.cpp.swp.orig  .chams.cpp.swp  .esp.cpp.swp  .esp.cpp.swp.orig  aimbot.cpp  aimbot.h  atomicpeek.cpp  atomicpeek.h  chams.cpp  chams.h  esp.cpp  esp.h  fakelag.cpp  fakelag.h  grenade_pred.cpp  grenade_pred.h  hacks.h  noflash.cpp  noflash.h  radar.cpp  radar.h
src/Hooks/: CreateMove.cpp  DrawModelExecute.cpp  Paint.cpp  hooks.h  hooks.h~
src/SDK/: .IEngineClient.h.swp  .IEngineTrace.h.swp  CBaseClientState.h  CCSGameRules.h  CEffects.h  CGameServer.h  CGlobalVars.h  CGlowObjectManager.h  CInput.h  CPlayerResource.h  CUtlMemory.h  CUtlVector.h  CViewRender.h  IAppSystem.h  IBaseClientDLL.h  IClientEntity.h  ICommandLine.h  ICvar.h  IEngineClient.h  IEngineSound.h  IEngineTrace.h  IEngineVGui.h  IGameMovement.h  IInputSystem.h  ILocalize.h  IMaterial.h  IMaterialSystem.h  IPhysicsSurfaceProps.h  IPrediction.h  ISurface.h  IVDebugOverlay.h  IVModelInfo.h  IVModelRender.h  IVPanel.h  KeyValues.h  SDK.h  checksum_md5.h  color.h  common.h  definitions.h  (+1 more)
src/Utils/: .util_sdk.cpp.swp  draw.cpp  draw.h  entity.cpp  entity.h  math.cpp  math.h  mousesim.cpp  mousesim.h  netvarmanager.cpp  patternfinder.cpp  patternfinder.h  pid.cpp  pid.h  pstring.h  util.cpp  util.h  util_sdk.cpp  util_sdk.h  vmt.h
src/gui/: imgui_impl_sdl.cpp  itgui.cpp  itgui.h  widgets.cpp  widgets.h  winmain.cpp  winmain.h
src/json/: jsoncpp.cpp
